feat: add Swagger documentation and user management endpoints
- Added Swagger configuration for API documentation.
- Created a new controller for user management with list and create functionalities.
- Updated home controller to include OpenAPI documentation.
- Modified routes to include user management endpoints.
- Updated database connection to use 'empresa_db'.
- Added new dependencies: swagger-jsdoc and swagger-ui-express.
- Removed unused model files related to previous database structure.

--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   "main": "index.js",
   "scripts": {
     "dev": "node src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:dbconection": "node src/scripts/test-db.js"
   },
   "dependencies": {
     "express": "^5.1.0",
     "mysql2": "^3.15.0",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
